--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".main.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -27,9 +27,15 @@
                 android:textStyle="bold"
                 app:layout_scrollFlags="scroll|enterAlways" />
 
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/tlMainToolBar"
+                android:layout_width="match_parent"
+                android:layout_height="?android:actionBarSize" />
+
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
         <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tlMainTopNavTab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabIndicatorFullWidth="false"
