--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,30 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:background="@android:color/white">
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btnClickGoMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="代码背景调试"
-        android:textSize="50sp"
-        android:textStyle="bold" />
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottieAnimator"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp" />
+        android:layout_gravity="center"
+        android:background="@drawable/ll_splash_preview" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/btnClickGoMain1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="xml背景调试"
-        android:textSize="50sp"
-        android:textStyle="bold" />
-
-
-</LinearLayout>
+</FrameLayout>
