--- a/app/src/main/res/drawable/ll_splash_preview.xml
+++ b/app/src/main/res/drawable/ll_splash_preview.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--  整体背景色  -->
+    <item android:drawable="@android:color/white" />
     <item
         android:drawable="@drawable/ic_splash_logo"
         android:gravity="center" />
