--- a/app/src/main/res/layout/include_action_bar.xml
+++ b/app/src/main/res/layout/include_action_bar.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="?android:actionBarSize">
+    android:layout_marginStart="0dp"
+    android:layout_height="?android:actionBarSize"
+    android:layout_marginLeft="0dp">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivIncludeGlobalBack"
@@ -14,7 +16,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0"
         app:tint="@color/colorAccent"
         app:tintMode="src_in" />
 
