--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent">
 
     <include
-        android:id="@+id/consWebViewHeader"
         layout="@layout/include_action_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,6 +18,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/consWebViewHeader" />
+        app:layout_constraintTop_toBottomOf="@id/customHeaderToolBar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
