--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,27 +12,24 @@
         app:elevation="0dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+<!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
+<!---->
+            <!--            <androidx.appcompat.widget.Toolbar-->
+            <!--                android:id="@+id/tlMainToolBar"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="?android:actionBarSize" >-->
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/tlMainToolBar"
-                android:layout_width="match_parent"
-                android:layout_height="?android:actionBarSize" >
-
-                <include layout="@layout/include_action_bar" />
-
-            </androidx.appcompat.widget.Toolbar>
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+            <!--            </androidx.appcompat.widget.Toolbar>-->
+<!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tlMainTopNavTab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabIndicatorFullWidth="false"
             android:background="@android:color/darker_gray"
+            app:tabIndicatorFullWidth="false"
             app:tabMode="scrollable" />
 
     </com.google.android.material.appbar.AppBarLayout>
