首页替换ViewPage2 使用StateAdapter Handler 子线程 没报错。 但 未执行runnable 疑问

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,6 @@
         android:id="@+id/vpMainPageContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+        android:orientation="horizontal"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
