--- a/app/src/main/res/layout/fragment_osc_post_list.xml
+++ b/app/src/main/res/layout/fragment_osc_post_list.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".main.MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:elevation="0dp"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:elevation="0dp"-->
+<!--        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">-->
+<!---->
         <!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
         <!--            android:layout_width="match_parent"-->
         <!--            android:layout_height="wrap_content">-->
@@ -23,23 +23,21 @@
 
         <!--            </androidx.appcompat.widget.Toolbar>-->
         <!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tlMainTopNavTab"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/darker_gray"
-            app:tabIndicatorFullWidth="false"
-            app:tabMode="scrollable" />
-
-    </com.google.android.material.appbar.AppBarLayout>
+<!---->
+<!--        <com.google.android.material.tabs.TabLayout-->
+<!--            android:id="@+id/tlMainTopNavTab"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@android:color/darker_gray"-->
+<!--            app:tabIndicatorFullWidth="false"-->
+<!--            app:tabMode="scrollable" />-->
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvMainTweetList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
