--- a/app/src/main/res/menu/main_bottom_tabs.xml
+++ b/app/src/main/res/menu/main_bottom_tabs.xml
@@ -1,24 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <group android:id="@+id/item_bottom_13" android:visible="true" android:enabled="true">
+
+    <group android:id="@+id/main_bottom_tab_group">
         <item
             android:id="@+id/fade"
             android:icon="@mipmap/ic_logo"
-            app:showAsAction="ifRoom"
-            android:title="@string/app_name" />
+            android:title="@string/main_bottom_tab_text_post"
+            app:showAsAction="ifRoom" />
 
         <item
             android:id="@+id/item_bottom_2"
             android:enabled="true"
             android:icon="@mipmap/ic_logo"
-            android:title="选项二"
+            android:title="@string/main_bottom_tab_text_blog"
             app:showAsAction="ifRoom" />
+
         <item
             android:id="@+id/item_bottom_3"
             android:enabled="true"
             android:icon="@mipmap/ic_logo"
-            android:title="选项三"
+            android:title="@string/main_bottom_tab_text_tweet"
             app:showAsAction="ifRoom" />
+
+        <item
+            android:id="@+id/item_bottom_4"
+            android:enabled="true"
+            android:icon="@mipmap/ic_logo"
+            android:title="@string/main_bottom_tab_text_mine"
+            app:showAsAction="ifRoom" />
+
     </group>
+
 </menu>
