首页替换为ViewPage 方案。 ViewPage2 无法处理触摸事件，导致嵌套ViewPage2 出现滑动冲突无法解决， 使用 ViewPage 良好的解决了这个问题 更新Base方法

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.viewpager2.widget.ViewPager2
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/vpMainPageContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/llMainBottomTabContainer"
         app:layout_constraintTop_toTopOf="parent" />
 
