--- a/app/src/main/res/layout/fragment_osc_post_list.xml
+++ b/app/src/main/res/layout/fragment_osc_post_list.xml
@@ -13,4 +13,10 @@
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
+    <Button
+        android:id="@+id/btnClickRefresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="知识改变人生" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
