--- a/app/src/main/res/layout/fragment_osc_post_list.xml
+++ b/app/src/main/res/layout/fragment_osc_post_list.xml
@@ -10,13 +10,8 @@
         android:id="@+id/rvMainTweetList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#F8F8F8"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
-    <Button
-        android:id="@+id/btnClickRefresh"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="知识改变人生" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
