--- a/app/src/main/res/layout/osc_item_blog_list.xml
+++ b/app/src/main/res/layout/osc_item_blog_list.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/bg_list_item"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvBlogItemTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"
-        android:text="标题"
+        android:textColor="@android:color/background_dark"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="标题" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvBlogItemPublishName"
