--- a/app/src/main/res/layout/osc_item_post_list.xml
+++ b/app/src/main/res/layout/osc_item_post_list.xml
@@ -2,9 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="5dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/bg_list_item"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvPostItemTitle"
@@ -12,7 +14,6 @@
         android:layout_height="wrap_content"
         android:maxLines="2"
         android:paddingStart="12dp"
-        android:paddingTop="8dp"
         android:paddingEnd="12dp"
         android:textColor="@android:color/background_dark"
         android:textSize="16sp"
